fix: prevent scrollbars on body with tooltips

--- a/packages/app/assets/css/floating-vue.css
+++ b/packages/app/assets/css/floating-vue.css
@@ -52,3 +52,10 @@
     @apply border-gray-800;
   }
 }
+
+
+/* Prevent scrollbar on body */
+
+body {
+  overflow: hidden;
+}
